--- a/src/app/pages/security-questions/security-questions.component.html
+++ b/src/app/pages/security-questions/security-questions.component.html
@@ -1,3 +1,11 @@
+<!--
+============================================
+; Title: WEB 450 Bob’s Computer Repair Shop
+; Author: Ethan Townsend, Lea Trueworthy, Natasha Whitmer, and Jason Sullenger
+; Date: 25 October 2019
+; Description: End-to-end billing system for Bob's Computer - MEAN stack
+;===========================================
+-->
 <mat-card>
   <h2>Please Fill Out Form</h2><br>
 
