--- a/src/styles.css
+++ b/src/styles.css
@@ -11,3 +11,9 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+body{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(119, 15, 157, 0.24);
+}
