--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -7,6 +7,15 @@
 ;===========================================
 -->
 
+<!--
+============================================
+; Title: WEB	450	Bob’s	Computer	Repair	Shop
+; Author: Ethan Townsend, Lea Trueworthy, Natasha Whitmer, and Jason Sullenger
+; Date: 17 October 2019
+; Description: End-to-end billing system for Bob's Computer - MEAN stack
+;===========================================
+-->
+
 <mat-card class="login-container" >
     <mat-card-title>Please Sign In</mat-card-title>
     
