login changes with header

--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -6,3 +6,11 @@
 ; Description: End-to-end billing system for Bob's Computer - MEAN stack
 ;===========================================
 */
+
+.login-container {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    width: 100%;
+    border: .5em darkorchid;
+}
