--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -7,19 +7,23 @@
 ;===========================================
 -->
 
-<mat-card class="login-container" >
+<mat-card class="login-container" and fxLayoutAlgin="center" >
     <mat-card-title>Please Sign In</mat-card-title>
     
     <mat-card-content>
-        <form #loginForm="ngForm" (ngSubmit)="submit(); form.reset();">
+        <form #loginForm="ngForm" (ngSubmit)="submit(); loginForm.reset();">
             <mat-card-content>
-                <mat-form-field>
-                    <input type="text" matInput [formControl]="form.controls['username']" placeholder="username">
-                    <small *ngIf="form.controls['username'].hasError('required') && form.controls['username'].touched">A username is required.</small>
-                    <small *ngIf="form.controls['username'].hasError('pattern') && form.controls['username'].touched">Please try again</small>
-                    <input type="text" matInput [formControl]="form.controls['password']" placeholder="password">
+                <mat-form-field class="username">
+                    <small *ngIf="loginForm.controls['username'].hasError('required') && loginForm.controls['username'].touched">A username is required.</small>
+                    <small *ngIf="loginForm.controls['username'].hasError('pattern') && loginForm.controls['username'].touched">Please try again</small>
+                    <input type="text" matInput [formControl]="loginForm.controls['username']" placeholder="username">
+                </mat-form-field>
+                
+                <mat-form-field class="password">
+                    <input type="text" matInput [formControl]="loginForm.controls['password']" placeholder="password">
                 </mat-form-field>
             </mat-card-content>
+
             <mat-card-actions>
                 <button mat-raised-button color="primary" [disabled]="!form.valid" type="submit">Log In</button>
             </mat-card-actions>
