--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="menu" role="header" color="primary">
     <mat-toolbar-row>
-        <mat-icon aria-hidden"false" aria-label="computer icon">computer</mat-icon>
+        <!--<mat-icon aria-hidden"false" aria-label="computer icon">computer</mat-icon> -->
         <button mat-button class="toolbar__icon-button mat-button" (click)="navHome()">
             <span style="margin-left: 5px !important;">Bob's</span>
         </button>
