--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -20,7 +20,7 @@
                 </mat-form-field>
                 
                 <mat-form-field class="password">
-                    <input type="text" matInput [formControl]="loginForm.controls['password']" placeholder="password">
+                    <input type="password" matInput [formControl]="loginForm.controls['password']" placeholder="password">
                 </mat-form-field>
             </mat-card-content>
 
