--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,25 +1,75 @@
-<mat-toolbar class="menu" role="header" color="primary">
-    <mat-toolbar-row>
-        <!--<mat-icon aria-hidden"false" aria-label="computer icon">computer</mat-icon> -->
-        <button mat-button class="toolbar__icon-button mat-button" (click)="navHome()">
-            <span style="margin-left: 5px !important;">Bob's</span>
+<div>
+  <!-- Page header -->
+  <header>
+    <!-- Navbar -->
+    <mat-toolbar class="menu" role="header" color="primary">
+      <mat-toolbar-row>
+        <!-- Home -->
+        <button
+          mat-button
+          class="toolbar__icon-button mat-button"
+          (click)="navHome()"
+        >
+          <mat-icon>computer</mat-icon>
+          <span style="margin-left: 5px !important">Bob's Computer Repair Shop</span>
         </button>
-        
-        <!-- <div fxFlex></div> Commented out due to formatting not appearing correctly-->
-    
-        <!-- User Profile -->
-        <button [matMenuTriggerFor]="menu" mat-icon-button>
-            <mat-icon>account_circle</mat-icon>
+        <!-- Service Repair -->
+        <button
+          mat-button
+          class="toolbar__icon-button mat-button"
+          (click)="navOrder()"
+        >
+          <mat-icon>build</mat-icon>
+          <span style="margin-left: 5px !important">Service Repair</span>
+        </button>
+        <!-- About Us -->
+        <button
+          mat-button
+          class="toolbar__icon-button mat-button"
+          (click)="navAbout()"
+        >
+          <mat-icon>class</mat-icon>
+          <span style="margin-left: 5px !important">About Us</span>
+        </button>
+        <!-- Contact Us -->
+        <button
+          mat-button
+          class="toolbar__icon-button mat-button"
+          (click)="navContact()"
+        >
+          <mat-icon>email</mat-icon>
+          <span style="margin-left: 5px !important">Contact Us</span>
+        </button>
+
+        <div fxFlex></div>
+
+        <button
+          mat-icon-button
+          class="toolbar__icon-button"
+          [matMenuTriggerFor]="menu"
+        >
+          <mat-icon>account_circle</mat-icon>
         </button>
         <mat-menu #menu="matMenu">
-            <button mat-menu-item>
-                <mat-icon>library_books</mat-icon>
-                <span>Another Button</span>
-            </button>
-            <button mat-menu-item (click)="logout()">
-                <mat-icon>exit_to_app</mat-icon>
-                <span>Logout</span>
-            </button>
+            <button mat-menu-item (click)="userProfile()">
+                <mat-icon>account_circle</mat-icon>
+                <span>My Profile</span>
+              </button>
+          <button mat-menu-item (click)="navManagement()">
+            <mat-icon>perm_contact_calendar</mat-icon>
+            <span>User Management</span>
+          </button>
+          <button mat-menu-item (click)="navUserList()">
+            <mat-icon>list</mat-icon>
+            <span>User List</span>
+          </button>
+          <button (click)="logout()" mat-menu-item>
+            <mat-icon>exit_to_app</mat-icon>
+            <span>Logout</span>
+          </button>
         </mat-menu>
-    </mat-toolbar-row>
-</mat-toolbar>
+      </mat-toolbar-row>
+    </mat-toolbar>
+    <!-- endNavbar -->
+  </header>
+  </div>
