--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -11,6 +11,20 @@
     display: flex;
     flex-direction: column;
     align-content: center;
-    width: 100%;
+    width: 25%;
     border: .5em darkorchid;
+    text-align: center;
+    margin-top: 150px;
+}
+
+mat-form-field {
+    width: 90%;
+}
+
+button {
+    width: 75%;
+}
+
+.error {
+    color: red;
 }
