routing for security questions changed

--- a/src/app/pages/user-management/user-management.component.html
+++ b/src/app/pages/user-management/user-management.component.html
@@ -6,6 +6,8 @@
 ; Description: End-to-end billing system for Bob's Computer - MEAN stack
 ;===========================================
 -->
+<h1>IT WORKS AND SHOWS TEXT</h1>
+<!--
 <table mat-table [dataSource]="myDataArray">
 
     <ng-container matColumnDef="userName">
@@ -58,4 +60,4 @@
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
     <tr mat-row *matRowDef="let myRowData; columns: columnsToDisplay"></tr>
 
-</table>
+</table> -->
