--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -8,23 +8,23 @@
 */
 
 .login-container {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    width: 25%;
-    border: .5em darkorchid;
-    text-align: center;
-    margin-top: 150px;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  width: 25%;
+  border: 0.5em darkorchid;
+  text-align: center;
+  margin-top: 150px;
 }
 
 mat-form-field {
-    width: 90%;
+  width: 90%;
 }
 
 button {
-    width: 75%;
+  width: 75%;
 }
 
 .error {
-    color: red;
+  color: red;
 }
