--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,3 +1,12 @@
+<!--
+============================================
+; Title: WEB	450	Bob’s	Computer	Repair	Shop
+; Author: Ethan Townsend, Lea Trueworthy, Natasha Whitmer, and Jason Sullenger
+; Date: 17 October 2019
+; Description: End-to-end billing system for Bob's Computer - MEAN stack
+;===========================================
+-->
+
 <div>
   <!-- Page header -->
   <header>
@@ -11,7 +20,9 @@
           (click)="navHome()"
         >
           <mat-icon>computer</mat-icon>
-          <span style="margin-left: 5px !important">Bob's Computer Repair Shop</span>
+          <span style="margin-left: 5px !important"
+            >Bob's Computer Repair Shop</span
+          >
         </button>
         <!-- Service Repair -->
         <button
@@ -51,10 +62,10 @@
           <mat-icon>account_circle</mat-icon>
         </button>
         <mat-menu #menu="matMenu">
-            <button mat-menu-item (click)="userProfile()">
-                <mat-icon>account_circle</mat-icon>
-                <span>My Profile</span>
-              </button>
+          <button mat-menu-item (click)="userProfile()">
+            <mat-icon>account_circle</mat-icon>
+            <span>My Profile</span>
+          </button>
           <button mat-menu-item (click)="navManagement()">
             <mat-icon>perm_contact_calendar</mat-icon>
             <span>User Management</span>
@@ -73,4 +84,4 @@
     </mat-toolbar>
     <!-- endNavbar -->
   </header>
-  </div>
+</div>
