--- a/src/app/pages/user-management/user-management.component.html
+++ b/src/app/pages/user-management/user-management.component.html
@@ -21,16 +21,84 @@
                 <th scope="col">Phone Number</th>
                 <th scope="col">Email</th>
                 <th scope="col">Address</th>
+                <th scope="col">Update</th>
+                <th scope="col">Delete</th>
             </tr>
         </thead>
         <tbody *ngFor="let user of users">
             <tr>
-                <th scope="row">{{ user.username }}</th>
-                <th scope="row">{{ user.name_first }}</th>
-                <th scope="row">{{ user.name_last }}</th>
-                <th scope="row">{{ user.phone_number }}</th>
-                <th scope="row">{{ user.email }}</th>
-                <th scope="row" *ngFor='let address of user.address'>{{ address.street_address }} {{ address.city }}, {{ address.state }}, {{ address.zip }} </th>
+                <td *ngIf='user._id === editUserId'><input type='text' [(ngModel)]='user.username'></td>
+                <td *ngIf='user._id !== editUserId' (click)='edit(user._id)' scope="row">{{ user.username }}</td>
+
+                <td scope="row" *ngIf='user._id !== editUserId'>{{ user.name_first }}</td>
+                <td *ngIf='user._id === editUserId'><input type='text' [(ngModel)]='user.name_first'></td>
+
+                <td scope="row" *ngIf='user._id !== editUserId'>{{ user.name_last }}</td>
+                <td *ngIf='user._id === editUserId'><input type='text' [(ngModel)]='user.name_last'></td>
+
+                <td scope="row" *ngIf='user._id !== editUserId'>{{ user.phone_number }}</td>
+                <td *ngIf='user._id === editUserId'><input type='text' [(ngModel)]='user.phone_number'></td>
+
+                <td scope="row" *ngIf='user._id !== editUserId'>{{ user.email }}</td>
+                <td *ngIf='user._id === editUserId'><input type='text' [(ngModel)]='user.email'></td>
+
+                <div *ngFor='let address of user.address'>
+                    <td scope="row" *ngIf='user._id !== editUserId'>{{ address.street_address }}</td>
+                    <td *ngIf='user._id === editUserId'><input type='text' [(ngModel)]='adress.street_address'></td>
+
+                    <td scope="row" *ngIf='user._id !== editUserId'>{{ address.city }}</td>
+                    <td *ngIf='user._id === editUserId'><input type='text' [(ngModel)]='adress.city'></td>
+
+                    <td scope="row" *ngIf='user._id !== editUserId'>{{ address.state }}</td>
+                    <td *ngIf='user._id === editUserId'><input type='text' [(ngModel)]='adress.state'></td>
+
+                    <td scope="row" *ngIf='user._id !== editUserId'>{{ address.zip }}</td>
+                    <td *ngIf='user._id === editUserId'><input type='text' [(ngModel)]='adress.zip'></td>
+                </div>
+
+                <!-- <button (click)='loadData()'>Update</button> -->
             </tr>
         </tbody>
     </table>
+
+<br/>
+
+    <div>
+        {{ users | json }}
+    </div>
+
+    <!-- <div fxLayoutAlign="center">
+            <mat-card class="login-container"  >
+                <mat-card-title>Update User</mat-card-title>
+                <mat-card-content>
+                    <form [formGroup]='updateForm' #updateform = 'ngForm' (ngSubmit)='onSubmit(updateForm.value); updateForm.reset()'>
+        
+                        <mat-card-content>
+                            <mat-form-field>
+                                <input type="text" matInput formControlName='username'> 
+                            </mat-form-field>
+                            <br/>
+                            <mat-form-field>
+                                <input type="text" matInput formControlName='firstName'>
+                            </mat-form-field>
+                            <br/>
+                            <mat-form-field>
+                                <input type="text" matInput formControlName='lastName'>
+                            </mat-form-field>
+                            <br/>
+                            <mat-form-field>
+                                <input type="text" matInput formControlName='email'>
+                            </mat-form-field>
+                            <br/>
+                            <mat-form-field>
+                                <input type="text" matInput formControlName='address'>
+                            </mat-form-field>
+                        </mat-card-content>
+        
+                        <mat-card-actions>
+                            <button mat-raised-button color="primary" type="submit">Submit Updated User</button>
+                        </mat-card-actions>
+                    </form>
+                </mat-card-content>
+            </mat-card>
+        </div> -->
