--- a/src/app/pages/security-questions/security-questions.component.html
+++ b/src/app/pages/security-questions/security-questions.component.html
@@ -7,34 +7,57 @@
 ;===========================================
 -->
 <div class="container">
-<small *ngIf="errorMessage">{{ errorMessage }} </small>
-<div class="questionListing">
-  <div class="questionTitle">
-    <h2>Security Question Management</h2>
+  <small *ngIf="errorMessage">{{ errorMessage }} </small>
+  <div class="questionListing">
+    <div class="questionTitle">
+      <h2>Security Question Management</h2>
+    </div>
+    <div *ngIf="newQuestion">
+        <input type="text" [(ngModel)]="addingQuestion" />
+        <button mat-raised-button color="accent" class="buttonStyle" (click)="addQuestion(addingQuestion)">
+            Submit Question
+          </button>
+      </div>
+    <button mat-raised-button color="primary" class="buttonStyle" *ngIf="!newQuestion" (click)="addNewQuestion()">
+      New Question
+    </button>
+    <table class="tableQuestion table table-hover">
+      <thead>
+        <tr>
+          <th scope="col">Question</th>
+          <th scope="col">Actions</th>
+        </tr>
+      </thead>
+      <tbody *ngFor="let question of questions">
+        <tr>
+          <td *ngIf="question._id === editQuestionId">
+            <input type="text" [(ngModel)]="question.question" />
+            <button mat-raised-button color="accent" class="buttonStyle" (click)="update(question)">
+                Update
+              </button>
+          </td>
+          <td
+            *ngIf="question._id !== editQuestionId"
+            scope="row"
+          >
+            {{ question.question }}
+          </td>
+
+          <td scope="row">
+            <button mat-raised-button color="accent" class="buttonStyle" (click)="edit(question._id)">
+              Edit
+            </button>
+            <button
+              mat-raised-button
+              color="warn"
+              class="buttonStyle"
+              (click)="deleteQuestion(question)"
+            >
+              Delete
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
-  <button mat-raised-button color="primary" class="buttonStyle">
-    Add New Question
-  </button>
-  <table class="tableQuestion table table-hover">
-    <thead>
-      <tr>
-        <th scope="col">Question</th>
-        <th scope="col">Actions</th>
-      </tr>
-    </thead>
-    <tbody *ngFor="let question of questions">
-      <tr>
-        <td scope="row">{{ question.question }}</td>
-        <td scope="row">
-          <button mat-raised-button color="accent" class="buttonStyle">
-            Edit
-          </button>
-          <button mat-raised-button color="warn" class="buttonStyle" (click)="deleteQuestion(question)">
-            Delete
-          </button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
 </div>
