--- a/src/app/pages/user-management/user-management.component.html
+++ b/src/app/pages/user-management/user-management.component.html
@@ -10,23 +10,24 @@
 <!-- Added error message -->
 <small *ngIf="errorMessage">{{ errorMessage }} </small>
 
-    <div class="userTitle">
-        <h2>User Summary</h2>
-    </div>
-    <table class="tableUser">
-        <thead>
-            <tr>
-                <th scope="col">Username</th>
-                <th scope="col">First Name</th>
-                <th scope="col">Last Name</th>
-                <th scope="col">Phone Number</th>
-                <th scope="col">Email</th>
-                <th scope="col">Address</th>
-                <th scope="col">Update</th>
-                <th scope="col">Delete</th>
-            </tr>
-        </thead>
-        <tbody *ngFor="let user of users">
+<div class="userTitle">
+    <h2>User Summary</h2>
+</div>
+<table class="tableUser">
+    <thead>
+        <tr>
+            <th scope="col">Username</th>
+            <th scope="col">First Name</th>
+            <th scope="col">Last Name</th>
+            <th scope="col">Phone Number</th>
+            <th scope="col">Email</th>
+            <th scope="col">Address</th>
+            <th scope="col">Update</th>
+            <th scope="col">Delete</th>
+        </tr>
+    </thead>
+
+    <tbody *ngFor="let user of users">
             <tr>
                 <td *ngIf='user._id === editUserId'><input type='text' [(ngModel)]='user.username'></td>
                 <td *ngIf='user._id !== editUserId' (click)='edit(user._id)' scope="row">{{ user.username }}</td>
@@ -56,10 +57,7 @@
                     <td scope="row" *ngIf='user._id !== editUserId'>{{ address.zip }}</td>
                     <td *ngIf='user._id === editUserId'><input type='text' [(ngModel)]='address.zip'></td>
                 </div>
-
-                <!-- <button (click)='loadData()'>Update</button> -->
+                <button (click)='onUpdate(user._id)'>Update</button>
             </tr>
         </tbody>
-    </table>
-
-
+</table>
