--- a/src/app/pages/user-management/user-management.component.css
+++ b/src/app/pages/user-management/user-management.component.css
@@ -6,3 +6,24 @@
 ; Description: End-to-end billing system for Bob's Computer - MEAN stack
 ;===========================================
 */
+
+mat-card{
+    width: 95%;
+    margin: auto;
+    margin-top: 100px;
+}
+
+table{
+    margin: auto;
+    max-width: 95%;
+    position: relative;
+}
+
+h2 {
+    text-align: center;
+}
+
+input {
+    margin: 0px;
+    padding: 0px;
+}
