--- a/src/app/pages/security-questions/security-questions.component.css
+++ b/src/app/pages/security-questions/security-questions.component.css
@@ -7,8 +7,18 @@
 ;===========================================
  */
 
+ mat-card{
+  width: 95%;
+  margin: auto;
+  margin-top: 100px;
+}
+
+h2 {
+  text-align: center;
+}
+
  .container {
-  width: 60%;
+  width: 95%;
   font-family: Arial, Helvetica, sans-serif;
   margin: 0 auto;
 }
