--- a/src/app/shared/session-layout/session-layout.component.html
+++ b/src/app/shared/session-layout/session-layout.component.html
@@ -9,7 +9,7 @@
 
 <div>
   <!-- Page header -->
-  <app-header></app-header>
+  <!--<app-header></app-header>-->
 
   <!-- Main page content -->
   <main>
