--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -7,6 +7,11 @@
 ;===========================================
 */
 
+h1 {
+  padding-top: 10px;
+  text-align: center;
+}
+
 .login-container {
   display: flex;
   flex-direction: column;
