--- a/src/app/pages/user-management/user-management.component.html
+++ b/src/app/pages/user-management/user-management.component.html
@@ -63,7 +63,7 @@
                         <button mat-button color='accent' *ngIf='isEdit !== true' (click)='edit(user._id)'><mat-icon>edit</mat-icon></button>
                     </td>
                     <td>
-                        <button mat-button color='danger' (click)='onDelete(user, user._id)'><mat-icon>delete</mat-icon></button> 
+                        <button mat-button color='warn' (click)='onDelete(user, user._id)'><mat-icon>delete</mat-icon></button> 
                     </td>
                 
                 </tr>
