--- a/src/styles.css
+++ b/src/styles.css
@@ -9,17 +9,11 @@
 
 /* You can add global styles to this file, and also import other style files */
 
-html,
-body {
+html {
   height: 100%;
+  width: 100%;
 }
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-}
-
-body {
-  width: 100%;
-  height: 100%;
-  background-color: rgba(119, 15, 157, 0.24);
 }
